CruiseControl Release Notes - Latest CVS

AntBuilder
----------------------
* Added more infomative exception when log file doesn't contain a build tag. Patch by Dave Glowacki
* Added check to ensure that log file exists before trying to get contents.
* Fixed getCommandLineArgs to handle EmptyLabelIncrementer

compile.xsl
----------------------
* Ignore empty lines. Patch by Brad Clarke

Compound
----------------------
* New SourceControl implementation uses nested Trigger and Target sourcecontrols. The targets are only checked for changes if there is a change detected by a trigger. Submitted by Will Gwaltney

CVS
----------------------
* Fixed a bug with not returning modfications when the tag attribute is used.

controlpanel.jsp
----------------------
* Replace link with iframe showing JMX interface. Patch by Archibald Bartleman

CruiseControlController
----------------------
* On a new project (no serialized project found) force a build. This is to aid setting up CruiseControl as you will not need to wait for a modification.

distributables.xsl
----------------------
* Added info for the ejbjar and ear tasks. Patch by Joris Kuipers

HTMLEmailBuilder
----------------------
* Delete temp files after they've been used. Patch by Joris Kuipers

index.jsp
----------------------
* Sort projects. Patch by Brad Clarke

jmx
----------------------
* Now using MX4J instead of Sun's reference implementation. Patch by Michael Kloss
* Added RMI adapter. Patch by Michael Beauregard

Main
----------------------
* Display command-line options if "-?" is passed as an argument.

ModificationSet
----------------------
* Fixed bogus "A modification was detected in the future" message
* Now properly checks time of modficiations that are added as elements

PluginXMLHelper
----------------------
* add support for nested elements via add(<Type>)

Project
----------------------
* Now fires BuildProgressEvents and BuildResultEvents. Patch by Michael Beauregard

PVCS
----------------------